# python-api-auto-test-demo

./: README.md  pyproject.toml  pyproject.toml.bak  requirements.txt  run_tests.py  test_driver.py
auenv/: pyvenv.cfg
auenv/Scripts/: activate  activate.bat
data/: test_cases.xlsx  test_data.yaml
report/: report.html
report/allure_results/: 19060003-5ba9-4f93-b691-43b3bdd8dad3-attachment.txt  1b9345cf-aee8-4965-a7c8-facd70e2085e-result.json  498f0c03-a6f5-4884-bc9c-70ad49a57302-attachment.txt  a322ce97-2d04-4703-a83c-27b69d24f79f-container.json  b3d3edaf-a5f7-4dbf-bb57-51f8a593bcc6-result.json  b4c32e6c-8255-44ff-9007-7b3783611d7a-attachment.txt  b5542dbd-ff3d-44c4-8a02-9f4d2a8e9034-result.json  f7266466-ed22-4038-8f00-f8780c35f4b9-container.json  fcd396af-28a3-4078-8342-e54016389946-container.json
tests/: test_api.py  test_seckill_api.py  test_web.py
utils/: api_client.py  driver_manager.py  request_util.py
